crates/service/tests/completion/snapshots/features__completion__structs__structs_following_ident.snap
---
source: crates/service/tests/completion/structs.rs
expression: response
---
[
  {
    "label": "$a",
    "labelDetails": {
      "detail": "(array)"
    },
    "kind": 8,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 15
        },
        "end": {
          "line": 6,
          "character": 17
        }
      },
      "newText": "$a"
    }
  },
  {
    "label": "1",
    "labelDetails": {
      "detail": "(struct)"
    },
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 15
        },
        "end": {
          "line": 6,
          "character": 17
        }
      },
      "newText": "1"
    }
  },
  {
    "label": "$b",
    "labelDetails": {
      "detail": "(struct)"
    },
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 15
        },
        "end": {
          "line": 6,
          "character": 17
        }
      },
      "newText": "$b"
    }
  }
]
